--- a/codemania/CodeMania.Core/CodeMania.Core.csproj
+++ b/codemania/CodeMania.Core/CodeMania.Core.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Client\CurrencyClient.cs" />
     <Compile Include="App.cs" />
     <Compile Include="CurrencyDatabase.cs" />
+    <Compile Include="ExtensionMethods.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
