--- a/codemania/packages/repositories.config
+++ b/codemania/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="../CodeMania.Android/packages.config" />
   <repository path="../CodeMania.Core/packages.config" />
   <repository path="../CodeMania.IOS/packages.config" />
 </repositories>
